kubernetes/apps/observability/twitch-exporter/app/httproute-eventsub.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitch-exporter-eventsub
  annotations:
    monitoring.webgrip.io/synthetic-check: twitch-eventsub-webhook
spec:
  hostnames:
    - twitch-eventsub.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /eventsub
          method: POST
      backendRefs:
        - name: twitch-exporter-eventsub
          port: 9184
